# python-lambdarest

./: .gitignore  .prospector.yaml  .python-version  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  _config.yml  conftest.py  dev_requirements.txt  pyproject.toml  pytest.ini  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: issue-template.md  pull_request_template.md
.github/workflows/: test.yml
docs/: CONTRIBUTING.md  HISTORY.md  README.md
lambdarest/: __init__.py  __version__.py
tests/: conftest.py  test_async.py  test_cli.py  test_client.py  test_lambdarest.py
trustpilot/: __init__.py  async_client.py  auth.py  cli.py  client.py
