[tool.poetry]
name = "lambdarest"
version = "12.0.1"
description = "flask like web framework for AWS Lambda"
authors = ["Johannes Valbjørn <johannes.valbjorn@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/trustpilot/python-lambdarest"
documentation = "https://github.com/trustpilot/python-lambdarest/blob/master/docs/README.md"
keywords = ["lambda", "aws", "awslambda", "flask", "web", "jsonschema", "werkzeug"]
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.7"
jsonschema = "^4.4.0"
strict_rfc3339 = "^0.7"
werkzeug = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
PyYaml = "^5.3.1"
mock = "^4.0.2"
pytest-readme = "^1.0.1"
taskipy = "^1.2.1"
black = "^22.3.0"

[tool.poetry.group.dev.dependencies]
pytest-readme = "^1.0.1"

[tool.taskipy.tasks]
test = "rm -f test_readme.py && pytest --doctest-modules -vvv"
lint = "black tests/ lambdarest/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
