[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lambdarest"
version = "13.0.0"
description = "flask like web framework for AWS Lambda"
authors = [{ name = "Johannes Valbjørn", email = "johannes.valbjorn@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["lambda", "aws", "awslambda", "flask", "web", "jsonschema", "werkzeug"]
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "jsonschema >= 4.4.0",
    "strict_rfc3339 >= 0.7",
    "werkzeug >= 2.0.0",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "pytest >= 7.1.0",
    "PyYaml >= 5.3.1",
    "mock >= 4.0.2",
    "pytest-readme >= 1.0.1",
    "black >= 22.3.0",
]


[project.urls]
Homepage = "https://github.com/sloev/python-lambdarest"